# gazebo_ycb

./: CMakeLists.txt  LICENSE  README.md  package.xml
env-hooks/: gazebo_ycb.sh
models/apple/: model.config  model.sdf
models/apple/meshes/: collision.dae  textured.dae
models/banana/: model.config  model.sdf
models/banana/meshes/: collision.dae  textured.dae
models/bleach_cleanser/: model.config  model.sdf
models/bleach_cleanser/meshes/: collision.dae  nontextured.stl  textured.dae
models/bowl/: model.config  model.sdf
models/bowl/meshes/: collision.dae  textured.dae
models/chips_can/: model.config  model.sdf
models/cracker_box/: model.config  model.sdf
models/cracker_box/meshes/: textured.dae
models/gelatin_box/: model.config  model.sdf
models/gelatin_box/meshes/: textured.dae
models/master_chef_can/: model.config  model.sdf
models/master_chef_can/meshes/: textured.dae
models/mustard_bottle/: model.config  model.sdf
models/mustard_bottle/meshes/: collision.dae  nontextured.stl  textured.dae
models/pitcher_base/: model.config  model.sdf
models/pitcher_base/meshes/: textured.dae
models/potted_meat_can/: model.config  model.sdf
models/potted_meat_can/meshes/: textured.dae
models/pudding_box/: model.config  model.sdf
models/pudding_box/meshes/: textured.dae
models/sugar_box/: model.config  model.sdf
models/sugar_box/meshes/: textured.dae
models/tomato_soup_can/: model.config  model.sdf
models/tomato_soup_can/meshes/: textured.dae
models/tuna_fish_can/: model.config  model.sdf
models/tuna_fish_can/meshes/: textured.dae
models/windex_bottle/: model.config  model.sdf
models/windex_bottle/meshes/: textured.dae
